fix overflow for small device navbar

--- a/assets/css/certificates.css
+++ b/assets/css/certificates.css
@@ -41,7 +41,7 @@ img.cert-icon-logo {
   top: 10px;
   right: 40px;
 }
-.tooltip .tooltip-text-cert {
+.tooltip-text-cert {
   display: flex;
   justify-content: center;
   align-items: center;
