--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,7 +5,5 @@
 
 .tooltip-switch {
   position: fixed;
-  top: 20px;
-  right: 25px;
   z-index: 1000;
 }
